# Cortical-Transfer

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
docs/adr/: 0001-format-first-flat-files.md  0002-profile-worktree-is-the-pack.md  0003-adapters-stdlib-http-scripted-pipeline.md  0004-sanitize-at-prompt-boundary.md  0005-mcp-flat-tools-substring-search.md  0006-redact-squash-and-prune.md  0007-synthetic-example-and-demo-model.md  0008-merge-gate-and-temporal-validity.md
examples/: eval_questions.json  locomo_prep.py  locomo_questions.json  passport-skill.md  passport-universal.md  quickstart.py  sample_history.jsonl
src/cortical_transfer/: __init__.py  cli.py  eval.py  inject.py  integrity.py  mcp_server.py  rag.py  redact.py  sanitize.py  schema.py  store.py
src/cortical_transfer/adapters/: anthropic.py  base.py  ollama.py  openai_compat.py
src/cortical_transfer/extract/: pipeline.py  prompts.py
tests/: test_enrich.py  test_eval.py  test_export_import.py  test_extract.py  test_inject_sanitize.py  test_mcp.py  test_mcp_export_import.py  test_redact.py  test_redact_rag.py  test_schema_integrity.py  test_store_cli.py
