[project]
name = "cortical-transfer"
version = "0.1.0"
description = "Portable AI memory: carry your identity, memory and style across LLMs. Reference implementation of the MemPack format."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "mcp>=1.0",
    "gitpython>=3.1",
]

[project.optional-dependencies]
rag = ["chromadb>=0.5"]

[project.scripts]
ct = "cortical_transfer.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortical_transfer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["cortical_transfer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["cortical_transfer"]
